# drm_transformer

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  LICENSE-COMMERCIAL.md  MODEL_CARD.md  PRIOR_ART.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  repro.md  requirements-lock.txt
configs/ablations/: full.yaml  no_gamma.yaml  no_gravity.yaml  no_variable_dim.yaml
configs/baselines/: small_1m.yaml
configs/scaling/: 1.3b.yaml  10m.yaml  13b.yaml  15m.yaml  162b.yaml  1m.yaml  350m.yaml  50m.yaml  5m.yaml  640b.yaml  70b.yaml
docs/future/: 001_commonsense_benchmarks_2026-03-23.md  002_release_tag_2026-03-23.md
docs/process/: 001_voronoi_foliation_pipeline_2026-03-22.md  002_diagonal_metric_scaling_2026-03-23.md  003_lowrank_semantic_axes_2026-03-23.md  004_reproducibility_2026-03-23.md  005_baseline_training_2026-03-23.md  006_ablations_eval_2026-03-23.md  007_paper_ready_2026-03-23.md
empirical/: results.json
empirical/figures/: plot_axis_heatmap.py  plot_axis_separation.py  plot_calibration.py  plot_combined.py  plot_pca.py  plot_tsne.py
empirical/tests/: run_all.py  test_axes_projection.py  test_axis_statistics.py  test_calibration.py  test_geometry_correlation.py  test_semantic_separation.py  utils.py
scripts/: eval_standard.py  extract_drm_vectors.py  prepare_baseline_data.py  prepare_multilingual_data.py  repro_baseline.py  run_ablations.py  train_distributed.py  voronoi_foliation_drm.py
src/drm_transformer/: __init__.py  attention.py  config.py  gravity.py  (+6 more)
tests/: test_smoke.py
(+54 files in other folders)
